# solveforge

./: .replit  DEPLOYMENT_CHECKLIST.md  WINT_TODO.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--Hello-We-ve-had-some-trouble-sending-requests-in-live-_1772538474680.txt  Pasted--We-ve-had-some-trouble-sending-requests-in-live-mode-t_1771849348478.txt  Pasted--i-would-like-to-update-my-resume-for-you-to-help-me-wr_1774957806343.txt  Pasted-Bounty-Request-Build-a-Problem-Solving-Crowdsourcing-Pl_1768753139289.txt  Pasted-New-Additions-to-Key-Requirements-and-Features-Add-as-a_1768828834224.txt  Pasted-Peter-Wint-is-the-founder-of-Wint-Enterprises-and-the-c_1774884788275.txt  Pasted-SolveForge-Complete-Feature-Summary-Here-s-everything-t_1768834904167.txt  Pasted-import-streamlit-as-st-import-random-App-Title-Descript_1768515724911.txt  content-1768831391629.md
bot/: __init__.py  config.py  dashboard.py  ideas_generator.py  main.py  notifications.py  scheduler.py  script_generator.py  social_poster.py  video_generator.py
bot/data/: ideas.json
client/: index.html
client/public/: manifest.json  robots.txt  sitemap.xml
client/src/: App.tsx  index.css
client/src/components/: addons-builder.tsx  admin-addons-manager.tsx  language-switcher.tsx  (+5 more)
public/: robots.txt  sitemap.xml
server/: bluesky.ts  coinbaseCommerce.ts  email.ts  heygen.ts  index.ts  mailchimp.ts  routes.ts  storage.ts  stripeClient.ts  stripeService.ts  webhookHandlers.ts
server/types/: coinbase-commerce-node.d.ts
shared/: schema.ts
(+14 files in other folders)
